Release Note

* 3/10/2015
  * changed queue lengh to 450*4
  * changed chunk size per site to 25

* 3/6/2015
  * introduced manyAssigned in AtlasPJB

* 3/3/2015
  * changed AtlasPJB to send logging info to the logger
  * changed AtlasPJB to assign highPrio/scouts to home+foreign T1

* 2/26/2015
  * changed AtlasPJB to check free disksize with rucio
  * fixed truncation error when throttling tasks
  * fixed prepareTasks for early avalanche

* 2/23/2015
  * added noThrottle
  * added partialFinish
  * using AVG for throttle

* 2/18/2015
  * added disableReassign
  * fixed AtlasPJT when high prio tasks are waiting

* 2/13/2015
  * changed AtlasPJB to send scouts to sites associated to T1 SE
  * changed reacivatePendingTasks to finish tasks when they have some finished files 
  * changed CF to allow 200k files

* 2/11/2015
  * changed AtlasPJB to include nDefined in nQueued
  * added bulkSendMsg to MsgWrapper
  * changed AtlasAJB to send brokerage logs
  * removed setReplicaMetaDataAttribute from AtlasTS
  * added soft finish
  * fixed insertFiles to take largeness of nEventsPerFile into account

* 2/10/2015
  * modified MW to escape <>
  * removed data locality check from AtlasPJB
  * fixed JG to set correct coreCount for pmerge
  * changed AtlasPJB to count jobs in all clouds
  * fixed getTasksToBeProcessed for zero SEQ_NUMBER

* 2/6/2015
  * added submitting messages to JG

* 2/5/2015
  * fixed typo in AtlasPPP 

* 2/4/2015
  * using long to get LB info
  * fixed InputChunk for nFilesPerMergeJob

* 2/3/2015
  * removed slow lookup in insertFiles
  * adding originPandaID to jobName

* 2/2/2015
  * added mergeCoreCount
  * changed AtlasDDM to use Rucio API for dataset registration

* 2/1/2015
  * fixed reuse of libTgz

* 1/30/2015
  * fixed reactivatePending to limit length of errorDialog

* 1/29/2015
  * fixed RW calculation to take effective size into account

* 1/27/2015
  * removed ND-specific handling for release check in AtlasJobBrokerages